examples/networkpolicy-tests/base/deploy/network-policies/app-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-egress
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - {}
