examples/networkpolicy-tests/base/deploy/network-policies/egress-block-all-except-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to: #allow
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: NAMESPACE
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
  - to:
    - ipBlock:
        cidr: 10.0.0.0/16
    - ipBlock:
        cidr: 207.171.166.22/32 # amazonaws.com
    - ipBlock:
        cidr: 72.21.210.29/32 # amazonaws.com
    - ipBlock:
        cidr: 72.21.206.80/32 # amazonaws.com
    - ipBlock:
        cidr: 34.235.198.240/32 # redhat.com
    - ipBlock:
        cidr: 52.200.142.250/32 # redhat.com
