examples/networkpolicy-tests/base/deploy/network-policies/egress-firewall-default.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
spec:
  egress:
  - to:
      cidrSelector: 10.0.0.0/16 ## whitelist DNS server. ToDo limit the range
    type: Allow
  - to:
      dnsName: amazonaws.com
    type: Allow
  - to:
      dnsName: www.amazonaws.com
    type: Allow
  - to:
      dnsName: redhat.com
    type: Allow
  - to:
      dnsName: www.redhat.com
    type: Allow
  - to: 
      cidrSelector: 0.0.0.0/0
    type: Deny
