examples/networkpolicy-tests/base/deploy/network-policies/ingress-block-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-deny-all-ingress
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from: #allow
    - podSelector:
        matchLabels: {}
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
